--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,9 +1,17 @@
 {
   "manifest_version": 2,
-  "name": "nicopinp",
-  "version": "0.1.0",
+  "name": "nicopip",
+  "version": "1.0.0",
   "description": "【非公式】ニコニコ動画をPinPで再生します",
-  "icons": {},
+  "icons": {
+    "16": "img/16.png",
+    "24": "img/24.png",
+    "32": "img/32.png",
+    "48": "img/48.png",
+    "128": "img/128.png",
+    "256": "img/256.png",
+    "512": "img/512.png"
+  },
   "content_scripts": [
     {
       "matches": ["https://www.nicovideo.jp/watch/*"],
