--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "watch:js": "webpack -w",
     "clean": "rimraf './app/js/*'",
     "format": "prettier --write src/**/*.js",
+    "zip": "run-s format build zip:*",
+    "zip:mkdir": "mkdirp _dist",
+    "zip:zipping": "deployment-zip ./app",
     "precommit": "lint-staged"
   },
   "lint-staged": {
@@ -30,9 +33,11 @@
     "@babel/core": "^7.6.0",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/preset-env": "^7.6.0",
+    "@rutan/deployment-zip": "^0.1.0",
     "babel-loader": "^8.0.6",
     "husky": "^3.0.5",
     "lint-staged": "^9.2.5",
+    "mkdirp": "^0.5.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.18.2",
     "rimraf": "^3.0.0",
