--- a/.babelrc
+++ b/.babelrc
@@ -1,15 +1,14 @@
 {
-    "presets": [
-      [
-        "@babel/preset-env",
-        {
-          "useBuiltIns": "usage",
-          "corejs": 3,
-          "modules": false
-        }
-      ]
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "useBuiltIns": "usage",
+        "corejs": 3,
+        "modules": false
+      }
     ],
-    "plugins": [
-      "@babel/plugin-proposal-class-properties"
-    ]
-  }
+    "@babel/preset-typescript"
+  ],
+  "plugins": ["@babel/plugin-proposal-class-properties"]
+}
