--- a/package.json
+++ b/package.json
@@ -10,20 +10,25 @@
     "watch": "run-p watch:*",
     "watch:js": "webpack -w",
     "clean": "rimraf './app/js/*'",
-    "format": "prettier --write src/**/*.js",
+    "lint": "eslint",
+    "lint:fix": "eslint --fix",
+    "format": "prettier --write src/**/*.js src/**/*.ts",
     "zip": "run-s format build zip:*",
     "zip:mkdir": "mkdirp _dist",
-    "zip:zipping": "deployment-zip ./app",
-    "precommit": "lint-staged"
+    "zip:zipping": "deployment-zip ./app"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "lint-staged": {
-    "src/**/*.{js,json}": [
-      "prettier --write",
-      "git add"
+    "src/**/*.{js,ts}": [
+      "eslint --fix",
+      "prettier --write"
     ],
     "app/manifest.json": [
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ]
   },
   "browserslist": [
@@ -33,14 +38,20 @@
     "@babel/core": "^7.12.10",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/preset-env": "^7.12.11",
+    "@babel/preset-typescript": "^7.12.7",
     "@rutan/deployment-zip": "^0.1.0",
+    "@typescript-eslint/eslint-plugin": "^4.11.1",
+    "@typescript-eslint/parser": "^4.11.1",
     "babel-loader": "^8.2.2",
+    "eslint": "^7.16.0",
+    "eslint-config-prettier": "^7.1.0",
     "husky": "^4.3.6",
     "lint-staged": "^10.5.3",
     "mkdirp": "^1.0.4",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
+    "typescript": "^4.1.3",
     "webpack": "^5.11.1",
     "webpack-cli": "^4.3.0"
   },
