--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "watch": "run-p watch:*",
     "watch:js": "webpack -w",
     "clean": "rimraf './app/js/*'",
-    "lint": "eslint",
-    "lint:fix": "eslint --fix",
+    "lint": "run-s lint:*",
+    "lint:tsc": "tsc --noEmit",
+    "lint:eslint": "eslint ./src",
+    "lint-fix": "eslint --fix ./src",
     "format": "prettier --write src/**/*.js src/**/*.ts",
     "zip": "run-s format build zip:*",
     "zip:mkdir": "mkdirp _dist",
@@ -40,6 +42,7 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-typescript": "^7.12.7",
     "@rutan/deployment-zip": "^0.1.0",
+    "@types/chrome": "^0.0.188",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@typescript-eslint/parser": "^4.11.1",
     "babel-loader": "^8.2.2",
