--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
   ],
   "devDependencies": {
     "@babel/core": "^7.12.10",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-typescript": "^7.12.7",
     "@rutan/deployment-zip": "^0.1.0",
@@ -60,5 +59,6 @@
   },
   "dependencies": {
     "core-js": "^3.8.1"
-  }
+  },
+  "packageManager": "yarn@1.22.22"
 }
