--- a/package.json
+++ b/package.json
@@ -12,46 +12,26 @@
     "clean": "rimraf './app/js/*'",
     "lint": "run-s lint:*",
     "lint:tsc": "tsc --noEmit",
-    "lint:eslint": "eslint ./src",
-    "lint-fix": "eslint --fix ./src",
-    "format": "prettier --write src/**/*.js src/**/*.ts",
+    "lint:biome": "yarn biome check .",
+    "format": "yarn biome check --write .",
     "zip": "run-s format build zip:*",
     "zip:mkdir": "mkdirp _dist",
-    "zip:zipping": "deployment-zip ./app"
+    "zip:zipping": "deployment-zip ./app",
+    "prepare": "husky",
+    "pre-commit": "run-s lint"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "src/**/*.{js,ts}": [
-      "eslint --fix",
-      "prettier --write"
-    ],
-    "app/manifest.json": [
-      "prettier --write"
-    ]
-  },
-  "browserslist": [
-    "last 2 Chrome versions"
-  ],
+  "browserslist": ["last 2 Chrome versions"],
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-typescript": "^7.12.7",
+    "@biomejs/biome": "1.8.3",
     "@rutan/deployment-zip": "^0.1.0",
     "@types/chrome": "^0.0.188",
-    "@typescript-eslint/eslint-plugin": "^4.11.1",
-    "@typescript-eslint/parser": "^4.11.1",
     "babel-loader": "^8.2.2",
-    "eslint": "^7.16.0",
-    "eslint-config-prettier": "^7.1.0",
-    "husky": "^4.3.6",
-    "lint-staged": "^10.5.3",
+    "husky": "^9.1.4",
     "mkdirp": "^1.0.4",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
     "typescript": "^4.1.3",
     "webpack": "^5.76.0",
