--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,14 +5,8 @@
     "allowJs": true,
     "rootDir": ".",
     "noEmit": true,
-    "lib": [
-      "es2017",
-      "dom"
-    ],
-    "types": [
-      "@types/node",
-      "@types/chrome"
-    ],
+    "lib": ["es2017", "dom"],
+    "types": ["@types/node", "@types/chrome"],
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "esModuleInterop": true,
@@ -20,7 +14,5 @@
     "noImplicitReturns": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": [
-    "src/**/*"
-  ]
+  "include": ["src/**/*"]
 }
