--- a/package.json
+++ b/package.json
@@ -16,29 +16,29 @@
     "format": "yarn biome check --write .",
     "zip": "run-s format build zip:*",
     "zip:mkdir": "mkdirp _dist",
-    "zip:zipping": "deployment-zip ./app",
+    "zip:zipping": "deployment-zip -c .deployment-zip.ts ./app",
     "prepare": "husky",
     "pre-commit": "run-s lint"
   },
   "browserslist": ["last 2 Chrome versions"],
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-typescript": "^7.12.7",
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.3",
+    "@babel/preset-typescript": "^7.24.7",
     "@biomejs/biome": "1.8.3",
-    "@rutan/deployment-zip": "^0.1.0",
-    "@types/chrome": "^0.0.188",
-    "babel-loader": "^8.2.2",
+    "@rutan/deployment-zip": "^0.5.0",
+    "@types/chrome": "^0.0.269",
+    "babel-loader": "^9.1.3",
     "husky": "^9.1.4",
-    "mkdirp": "^1.0.4",
+    "mkdirp": "^3.0.1",
     "npm-run-all": "^4.1.5",
-    "rimraf": "^3.0.2",
-    "typescript": "^4.1.3",
-    "webpack": "^5.76.0",
-    "webpack-cli": "^4.3.0"
+    "rimraf": "^6.0.1",
+    "typescript": "^5.5.4",
+    "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
-    "core-js": "^3.8.1"
+    "core-js": "^3.38.0"
   },
   "packageManager": "yarn@1.22.22"
 }
