--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,8 @@
     "allowJs": true,
     "rootDir": ".",
     "noEmit": true,
-    "lib": ["es2017", "dom"],
-    "types": ["@types/node", "@types/chrome"],
+    "lib": ["ESNext", "dom"],
+    "types": ["@types/node", "@types/chrome", "@types/dom-navigation"],
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "esModuleInterop": true,
