--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@biomejs/biome": "1.8.3",
     "@rutan/deployment-zip": "^0.5.0",
     "@types/chrome": "^0.0.269",
+    "@types/dom-navigation": "^1.0.5",
     "babel-loader": "^9.1.3",
     "husky": "^9.1.4",
     "mkdirp": "^3.0.1",
