--- a/package.json
+++ b/package.json
@@ -1,46 +1,35 @@
 {
   "type": "module",
-  "name": "nicopinp",
+  "name": "nicopip",
   "version": "1.8.0",
-  "main": "index.js",
+  "description": "【非公式】ニコニコ動画・ニコニコ生放送をPinPで再生します",
   "author": "ru_shalm <ru_shalm@hazimu.com>",
   "license": "MIT",
   "scripts": {
-    "build": "run-s clean build:*",
-    "build:js": "NODE_ENV=production webpack",
-    "watch": "run-p watch:*",
-    "watch:js": "webpack -w",
-    "clean": "rimraf './app/js/*'",
+    "build": "run-s build:*",
+    "build:vite": "cross-env NODE_ENV=production vite build",
+    "dev": "vite",
     "lint": "run-s lint:*",
     "lint:tsc": "tsc --noEmit",
-    "lint:biome": "yarn biome check .",
-    "format": "yarn biome check --write .",
+    "lint:biome": "biome check .",
+    "format": "biome check --write .",
     "zip": "run-s format build zip:*",
-    "zip:mkdir": "mkdirp _dist",
-    "zip:zipping": "deployment-zip -c .deployment-zip.ts ./app",
+    "zip:zipping": "deployment-zip -c .deployment-zip.ts ./dist",
     "prepare": "husky",
     "pre-commit": "run-s lint"
   },
-  "browserslist": ["last 2 Chrome versions"],
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@babel/preset-env": "^7.25.3",
-    "@babel/preset-typescript": "^7.24.7",
-    "@biomejs/biome": "1.8.3",
+    "@biomejs/biome": "2.2.0",
+    "@crxjs/vite-plugin": "^2.2.0",
     "@rutan/deployment-zip": "^0.5.0",
-    "@types/chrome": "^0.0.269",
-    "@types/dom-navigation": "^1.0.5",
-    "babel-loader": "^9.1.3",
-    "husky": "^9.1.4",
-    "mkdirp": "^3.0.1",
-    "npm-run-all": "^4.1.5",
-    "rimraf": "^6.0.1",
-    "typescript": "^5.5.4",
-    "webpack": "^5.93.0",
-    "webpack-cli": "^5.1.4"
+    "@types/chrome": "^0.1.4",
+    "@types/dom-navigation": "^1.0.6",
+    "@types/node": "^24.3.0",
+    "cross-env": "^10.0.0",
+    "husky": "^9.1.7",
+    "npm-run-all2": "^8.0.4",
+    "typescript": "^5.9.2",
+    "vite": "^7.1.3"
   },
-  "dependencies": {
-    "core-js": "^3.38.0"
-  },
-  "packageManager": "yarn@1.22.22"
+  "packageManager": "pnpm@10.14.0"
 }
